# pymvs-texturing

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: build_wheels.yml
package/: install-mvs-texturing-linux.sh  install-mvs-texturing-macos.sh  install-mvs-texturing-windows.ps1
src/pymvs_texturing/: bindings.cpp
