[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "pymvs-texturing"
version = "0.1.0"
description = "Python bindings for MVS-Texturing"
readme = "README.md"
authors = [{ name="Your Name", email="you@example.com" }]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["numpy"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.args = ["-DTBB_DIR=/opt/oneapi-tbb-2021.12.0/lib/cmake/tbb"]


[tool.cibuildwheel]
build = "cp3{9,10,11}-{macosx,manylinux,win}*"
archs = ["auto64"]
test-command = "python -c \"import pymvs_texturing; print(pymvs_texturing.__name__)\""

[tool.cibuildwheel.linux]
before-all = "bash {project}/package/install-mvs-texturing-linux.sh && ls -l external/mvs-texturing/build/libs/tex/libtex.a"

[tool.cibuildwheel.macos]
before-all = "{project}/package/install-mvs-texturing-macos.sh"

[tool.cibuildwheel.windows]
before-all = "powershell -File {project}/package/install-mvs-texturing-windows.ps1"
before-build = "pip install delvewheel"

